objects/Product2.object
<CustomObject>
    <fields>
        <fullName>EAN__c</fullName>
        <label>EAN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batched_item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batched Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>SAP Materialnummer</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>family_1__c</fullName>
        <label>Family (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>function_3__c</fullName>
        <label>Function (3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group_5__c</fullName>
        <label>Group (5)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>main_group__c</fullName>
        <label>Main Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>main_group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIOTRONIK</fullName>
                    <default>true</default>
                    <label>BIOTRONIK</label>
                </value>
                <value>
                    <fullName>5500_APC</fullName>
                    <label>AMERICAN PACEMAKER CORP.</label>
                </value>
                <value>
                    <fullName>5500_ACO</fullName>
                    <label>ANGEION CORP.</label>
                </value>
                <value>
                    <fullName>5500_BME</fullName>
                    <label>BIOMEC</label>
                </value>
                <value>
                    <fullName>5500_BSX</fullName>
                    <label>BOSTON SCIENTIFIC</label>
                </value>
                <value>
                    <fullName>5500_CAC</fullName>
                    <label>CARDIAC CONTROL</label>
                </value>
                <value>
                    <fullName>5500_CAI</fullName>
                    <label>CARDIAC IMPULSE</label>
                </value>
                <value>
                    <fullName>5500_CAP</fullName>
                    <label>CARDIAC PACEMAKER</label>
                </value>
                <value>
                    <fullName>5500_CPR</fullName>
                    <label>CARDIAC PRODUCTS</label>
                </value>
                <value>
                    <fullName>5500_CPM</fullName>
                    <label>CARDIO-PACE MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_CHR</fullName>
                    <label>CHRONIC</label>
                </value>
                <value>
                    <fullName>5500_COK</fullName>
                    <label>COOK</label>
                </value>
                <value>
                    <fullName>5500_COI</fullName>
                    <label>CORATOMIC INC.</label>
                </value>
                <value>
                    <fullName>5500_COR</fullName>
                    <label>CORDIS</label>
                </value>
                <value>
                    <fullName>5500_DAI</fullName>
                    <label>DAIG CORP.</label>
                </value>
                <value>
                    <fullName>5500_ES</fullName>
                    <label>EA</label>
                </value>
                <value>
                    <fullName>5500_ELM</fullName>
                    <label>ELA MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_ELS</fullName>
                    <label>ELS</label>
                </value>
                <value>
                    <fullName>5500_ENP</fullName>
                    <label>ENPATH MEDICAL INC.</label>
                </value>
                <value>
                    <fullName>5500_GRE</fullName>
                    <label>GREATBATCH</label>
                </value>
                <value>
                    <fullName>5500_GDT</fullName>
                    <label>GUIDANT</label>
                </value>
                <value>
                    <fullName>5500_IMP</fullName>
                    <label>IMPLANTRONIK</label>
                </value>
                <value>
                    <fullName>5500_INA</fullName>
                    <label>INHO A</label>
                </value>
                <value>
                    <fullName>5500_INH</fullName>
                    <label>INHOUEE</label>
                </value>
                <value>
                    <fullName>5500_INN</fullName>
                    <label>INHOUSEN</label>
                </value>
                <value>
                    <fullName>5500_INO</fullName>
                    <label>INNOMEDICA LTD.</label>
                </value>
                <value>
                    <fullName>5500_INT</fullName>
                    <label>INTERMEDICS INC.</label>
                </value>
                <value>
                    <fullName>5500_MDO</fullName>
                    <label>MEDICO</label>
                </value>
                <value>
                    <fullName>5500_MDT</fullName>
                    <label>MEDTRONIC, INC</label>
                </value>
                <value>
                    <fullName>5500_MYO</fullName>
                    <label>MYOPORE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>manufacturer_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Biotronik manufacturer account.</description>
        <label>Manufacturer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (Manufacturer)</relationshipLabel>
        <relationshipName>Products_Manufacturer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mat_group_4__c</fullName>
        <description>SAP Material Group 4</description>
        <label>Common Device Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>out_of_country_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Products added as part of the CAN - MDR integration that are on complaints out of the country.</description>
        <label>Out of Country Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pma__c</fullName>
        <description>Post market acceptance number assigned by FDA</description>
        <label>PMA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_mri_applicable_model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>pro MRI applicable Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>product_type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>quantity_unit_of_measure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quantity_unit_of_measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_model_no__c</fullName>
        <externalId>true</externalId>
        <label>SAP Model No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serialized_item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serialized Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>study_product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field. If checked, a check sign indicates a product as a study product in the list view</description>
        <label>Study Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sub_function_2__c</fullName>
        <label>Sub-function (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_group_4__c</fullName>
        <label>Sub-group (4)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subregion_6__c</fullName>
        <label>Subregion (6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>system__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Filled by SAP PI</description>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>messenger</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <label>System</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>